# specode

./: .env.example  .gitignore  README.md  pyproject.toml
src/specode/: __init__.py  artifacts.py  cli.py  commands.py  completion.py  execution.py  interactive.py  policy.py  pydantic_runtime.py  references.py  role_tools.py  run_store.py  runtime.py  schemas.py  steering.py  tool_sanitizer.py  ui.py  web_search.py  workflow.py  workspace_tools.py
steering/: product.md  structure.md  tech.md
steering/style/: DESIGN.md
tests/: test_artifacts_store.py  test_cli_router.py  test_cli_spec.py  test_cli_workflow_commands.py  test_commands.py  test_completion.py  test_execution.py  test_interactive.py  test_package.py  test_policy.py  test_pydantic_runtime.py  test_role_schemas.py  test_role_tools.py  test_run_store.py  test_runtime_fake.py  test_state_schema.py  test_tool_sanitizer.py  test_ui.py  test_web_search.py  test_workflow_gates.py  test_workflow_pipeline.py  test_workflow_transitions.py  test_workspace_tools_delete.py  test_workspace_tools_read_write.py
tests/e2e/: test_foundation_artifacts.py  test_openai_chatgpt_runtime.py  test_spec_and_steering_commands.py  test_spec_role_pipeline.py  test_tool_and_execution_safety.py
tests/fixtures/openai_chatgpt_runtime/: chat_response.json  role_returns.json  role_schema_summary.json
